# calculator

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: Button.cpp.03FF7E9E4FACF466.idx  Button.cpp.14C394AC69FD794F.idx  Button.hpp.2CF99EE5488DD658.idx  Calculator.cpp.CC6509E2597C60BB.idx  Calculator.cpp.D9EEA18FCAC2000C.idx  Calculator.cpp.DBBC5E137287927B.idx  Calculator.hpp.692F88F967F488BD.idx  Calculator.hpp.749922B769E90F46.idx  Display.cpp.AAC247641808887C.idx  Display.cpp.D523E5834D317C9F.idx  Display.hpp.36428AE8758E0F86.idx  Display.hpp.A78EC10B2B3A597A.idx  InputBoard.cpp.33B4DECB24F8229B.idx  InputBoard.cpp.EA172BEA757676A6.idx  InputBoard.hpp.6CA6F044FF44B5DC.idx  InputBoard.hpp.E083661A60B9C927.idx  Operand.cpp.EF9B59FAD2226BEE.idx  Operand.hpp.DB4C470B64E33ACB.idx  SDL_Tools.cpp.0D94FA64FB0ABEFD.idx  SDL_Tools.cpp.5200D89818113393.idx  SDL_Tools.hpp.9BAB469F80CF531C.idx  SDL_Tools.hpp.EC0DF43B970D7C87.idx  UI_Element.cpp.769C0317E6A91FC4.idx  UI_Element.cpp.B99F7EDBDAD09026.idx  UI_Element.hpp.0F67FAC60808C3B5.idx  UI_Element.hpp.A0CCD142731D0D99.idx  calculator.cpp.FFC0BB66E6AA6B9E.idx  calculator.hpp.6BC9467D177F4972.idx  gmock-actions.h.47E1434675481833.idx  gmock-all.cc.53D9A107A4234D2F.idx  gmock-cardinalities.cc.B6FE292FC03E23A8.idx  gmock-cardinalities.h.6EB2117A3BAEF0D2.idx  gmock-function-mocker.h.6CB34D18428A9002.idx  gmock-generated-actions.h.22C58138D04BE8B9.idx  gmock-internal-utils.cc.321B5DBA55D0D915.idx  gmock-internal-utils.h.E1993497CFB3A0DB.idx  gmock-matchers.cc.70AA7D987A74457F.idx  gmock-matchers.h.964E651C80EBDB59.idx  gmock-matchers.h.E6BC1AF5D6A61F43.idx  gmock-more-actions.h.BE316CC94D2DF76D.idx  (+47 more)
UT/: CMakeLists.txt  Calculator.cpp
cmake/: FindSDL2_ttf.cmake
dependency/SDL2/: CMakeLists.txt
dependency/SDL2/include/: SDL_power.h:Zone.Identifier
dependency/SDL2_image/: CMakeLists.txt  README.txt:Zone.Identifier
dependency/SDL2_mixer/lib/x86/: SDL2_mixer.dll:Zone.Identifier
dependency/SDL2_ttf/: CMakeLists.txt
dependency/SDL2_ttf/include/: SDL_ttf.h:Zone.Identifier
include/: Button.hpp  CMakeLists.txt  Calculator.hpp  Display.hpp  InputBoard.hpp  Operand.hpp  SDL_Tools.hpp  UI_Element.hpp  calculator.hpp
src/: Button.cpp  Calculator.cpp  Display.cpp  InputBoard.cpp  Operand.cpp  SDL_Tools.cpp  UI_Element.cpp  calculator.cpp  main.cpp
